--- a/t1.md
+++ b/t1.md
@@ -1,108 +1,40 @@
-Download the pre-built binary
+### 1.CAP原理
 
-https://github.com/etcd-io/etcd/releases
+- 要想数据高可用，就得写多份数据
+
+- 写多分数据就会导致数据一致性问题
+
+- 数据一致性问题会引起性能问题
 
 
-解压安装
+### 2.一致性模型
 
-```python
-# tar zxvf etcd-v3.0.17-linux-amd64.tar.gz
-# cd etcd-v3.0.17-linux-amd64
-# cp etcd /usr/bin/
-# cp etcdctl /usr/bin/
-```
-
-配置Service
-
-```
-[Unit]
-Description=Etcd Service
-After=network.target
-After=network-online.target
-Wants=network-online.target
- 
-[Service]
-Type=notify
-Restart=on-failure
-WorkingDirectory=/var/lib/etcd/
-EnvironmentFile=-/etc/etcd/etcd.conf
-ExecStart=/bin/bash -c "GOMAXPROCS=$(nproc) /usr/bin/etcd \
---name=\"${ETCD_NAME}\"\
---data-dir=\"${ETCD_DATA_DIR}\" \
---listen-peer-urls=\"${ETCD_LISTEN_PEER_URLS}\" \
---listen-client-urls=\"${ETCD_LISTEN_CLIENT_URLS}\"\
---advertise-client-urls=\"${ETCD_ADVERTISE_CLIENT_URLS}\"\
---initial-cluster-token=\"${ETCD_INITIAL_CLUSTER_TOKEN}\"\
---initial-cluster=\"${ETCD_INITIAL_CLUSTER}\" \
---initial-cluster-state=\"${ETCD_INITIAL_CLUSTER_STATE}\""
-[Install]
-WantedBy=multi-user.target
-```
-
-配置conf 
-
- (以etcd01为例，其他节点注意对应地修改192.9.100.127 为对应节点IP，ETCD_NAME为对应节点etcd角色名)
-
-```
-# mkdir /etc/etcd
-# vim /etc/etcd/etcd.conf
-```
-
-```
-ETCD_NAME=etcd01
-ETCD_DATA_DIR="/var/lib/etcd/data"
-ETCD_LISTEN_PEER_URLS="http://192.168.1.107:2380"
-ETCD_LISTEN_CLIENT_URLS="http://192.168.1.107:2379,http://127.0.0.1:2379"
-ETCD_INITIAL_ADVERTISE_PEER_URLS="http://192.168.1.107:2380"
-ETCD_INITIAL_CLUSTER="etcd01=http://192.168.1.104:2380,etcd02=http://192.168.1.106:2380,etcd03=http://192.168.1.107:2380"
-ETCD_INITIAL_CLUSTER_STATE="new"
-ETCD_INITIAL_CLUSTER_TOKEN="kube-etcd-cluster"
-ETCD_ADVERTISE_CLIENT_URLS="http://192.168.1.107:2379"
-```
-
-启动服务
-
-```
-# mkdir -p /var/lib/etcd/data
-# systemctl daemon-reload
-# systemctl start etcd
-# systemctl enable etcd
-```
-
-验证
-
-```
-# etcdctl cluster-health
-bash: /usr/bin/etcdctl: 权限不够
-```
-
-cluster may be unhealthy: failed to list members
-Error:  client: etcd cluster is unavailable or misconfigured; error #0: dial tcp 127.0.0.1:2379: connect: connection refused
-
-检查
-
-```
-systemctl status etcd.service
-```
-
-Active: failed (Result: start-limit)
-
-```
-chmod 755 etcd*
-```
-
-重新执行 
-
-```
-systemctl start etcd
-etcdctl cluster-health
-```
-
-member 320eb11a4720baba is healthy: got healthy result from http://192.168.1.104:2379
-member d2cc3d65c2eda3e5 is healthy: got healthy result from http://192.168.1.107:2379
-member e37e8afd5f99f6f9 is healthy: got healthy result from http://192.168.1.106:2379
-cluster is healthy
+1. 弱一致性
+2. 最终一致性（一段时间达到一致性）
+3. 强一致
 
 
 
-参看 ：https://blog.csdn.net/shida_csdn/article/details/78427434
+## 解决一致性事务问题的方案
+
+  1. Master -Slave
+
+- 读写请求由Master负责
+- 写请求写到Master后，由Master同步到Slave上
+  - 由Master push or Slave pull
+  - 通常是由Slave 周期性来pull，所以是最终一致性
+
+问题： 若在 pull 周期内（不是期间？），master挂掉，那么会导致这个时间片内的数据丢失
+
+- 若不想让数据丢掉，Slave 只能成为 ReadOnly方式等Master恢复
+- 若容忍数据丢失，可以让 Slave代替Master工作
+
+如何保证强一致性？
+
+- Master 写操作，写完成功后，再写 Slave，两者成功后返回成功。若 Slave失败，两种方法
+  1. 标记 Slave 不可用报错，并继续服务（等恢复后，再同步Master的数据，多个Slave少了一个而已）
+  2. 回滚自己并返回失败
+  
+  
+  
+  https://blog.csdn.net/followmyinclinations/article/details/52870418
